--- a/Release-1.6.5.css
+++ b/Release-1.6.5.css
@@ -57,4 +57,31 @@ div.gridbox_dhx_web.gridbox table.hdr td:hover {
     text-shadow: 0px 0px 0px rgba(0,0,0,0.00) !important;
     -webkit-box-shadow: 0px 0px 0px rgba(0,0,0,0.00) !important;
     background-color: rgb(64, 157, 255) !important;
+    background-image: none !important;}
+
+stlGreyHeader {
+    -webkit-border-top-left-radius: 10px !important;
+    -webkit-border-top-right-radius: 10px !important;
+    background-color: #055a78 !important;
     background-image: none !important;
+}
+div.sheet > div.body, div.modal > div.body {
+    background-color: #2d99bf;
+    position: absolute;
+    box-shadow: 0px 5px 8px rgba(0,0,0,0.50);
+    -webkit-box-shadow: 0px 5px 8px rgba(0,0,0,0.50);
+    -moz-box-shadow: 0px 5px 8px rgba(0,0,0,0.50);}
+
+    .stlGreyHeader {
+    -webkit-border-top-left-radius: 10px !important;
+    background-color: #1cade0 !important;
+    background-image: none !important;
+}
+
+.toolbar .item.horizontal {
+    border-left: 1px solid transparent;
+    border-right: 1px solid transparent;
+    position: relative;
+    box-shadow: none;
+}
+
