--- a/Release-1.7.css
+++ b/Release-1.7.css
@@ -13,7 +13,7 @@ div.increase:hover,div.decrease:hover{background-color:#ddd}
 .XojoErrorButton:hover{text-shadow:none !important;color:#09a4ff!important}
 *{transition: all ease 0.5s}
 div.gridbox.gridbox_dhx_web.isModern{transition:none;}
-.track,input,.stlButton,td:not(._DefaultStyle),div.segmented .cell,select,div.increase,img[src$="ok.png"],img[src$="cancelWhite.png"],div.decrease{cursor:pointer !important}
+textarea:not([readonly]),.track,input,.stlButton,td:not(._DefaultStyle),div.segmented .cell,select,div.increase,img[src$="ok.png"],img[src$="cancelWhite.png"],div.decrease{cursor:pointer !important}
 div.segmented .cell{color:#ffff}
 tr:hover, td.button:hover{box-shadow: 2px 2px 2px 2px #AAA}
 table:not(.headers) tr:hover {background-color:rgba(255, 114, 0, 0.51) !important}
@@ -25,11 +25,12 @@ td.column4:hover{color:green;}
 .stlButton:active,.stlButton:active:hover{outline: 0;background:linear-gradient(to top, rgba(44, 186, 255, 1) 0%, rgba(18, 126, 242, 1) 100%) !important}
 .stlButton:focus{outline: rgba(255, 114, 0, 0.51) auto 10px;}
 select:hover,select:focus,select:active{background-color:#EEE;border: 1px #000 solid}
-input[type="text"]:focus,input[type="password"]:focus,input:not([type]):focus,input[type="url"]:focus,input[type="email"]:focus,input[type="day"]:focus,input[type="search"]:focus,input[type="number"]:focus,input[type="text"]:active,input[type="password"]:active,input:not([type]):active,input[type="url"]:active,input[type="email"]:active,input[type="day"]:active,input[type="search"]:active,input[type="number"]:active{cursor:text !important;outline: 0;background-color:#EEE}
+textarea:focus:not([readonly]),input[type="text"]:focus,input[type="password"]:focus,input:not([type]):focus,input[type="url"]:focus,input[type="email"]:focus,input[type="day"]:focus,input[type="search"]:focus,input[type="number"]:focus,input[type="text"]:active,input[type="password"]:active,input:not([type]):active,input[type="url"]:active,input[type="email"]:active,input[type="day"]:active,input[type="search"]:active,input[type="number"]:active{cursor:text !important;outline: 0;background-color:#EEE}
 .stlButton:hover{background:linear-gradient(to bottom, rgba(44, 186, 255, 1) 0%, rgba(18, 126, 242, 1) 100%) !important}
 .unselectable.toolbar tr{background:linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(204,204,204,1) 100%) !important}
 .unselectable.toolbar td:not(.button){box-shadow:none !important;cursor:default !important}
-input[type="text"]:hover,input[type="password"]:hover,input:not([type]):hover,input[type="url"]:hover,input[type="email"]:hover,input[type="day"]:hover,input[type="search"]:hover,input[type="number"]:hover{border-color:rgba(255,128,64,1.00)}
+textarea:hover:not([readonly]),input[type="text"]:hover,input[type="password"]:hover,input:not([type]):hover,input[type="url"]:hover,input[type="email"]:hover,input[type="day"]:hover,input[type="search"]:hover,input[type="number"]:hover{border-color:rgba(255,128,64,1.00) !important}
 .modal{cursor:default}
+[readonly]{cursor:default}
 div.segmented .cell:focus,div.segmented .cell:focus:active,div.segmented .cell:active{background-color:#09a4ff !important}
 img[src$="cancelWhite.png"]:hover,img[src$="ok.png"]:hover{background-color:rgba(120, 120, 120, 1)}
