Fixed some bugs

--- a/Release-1.7.css
+++ b/Release-1.7.css
@@ -30,7 +30,6 @@ textarea:focus:not([readonly]),input[type="text"]:focus,input[type="password"]:f
 .unselectable.toolbar tr{background:linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(204,204,204,1) 100%) !important}
 .unselectable.toolbar td:not(.button){box-shadow:none !important;cursor:default !important}
 textarea:hover:not([readonly]),input[type="text"]:hover,input[type="password"]:hover,input:not([type]):hover,input[type="url"]:hover,input[type="email"]:hover,input[type="day"]:hover,input[type="search"]:hover,input[type="number"]:hover{border-color:rgba(255,128,64,1.00) !important}
-.modal{cursor:default}
-[readonly]{cursor:default}
+.modal,[readonly]{cursor:default}
 div.segmented .cell:focus,div.segmented .cell:focus:active,div.segmented .cell:active{background-color:#09a4ff !important}
 img[src$="cancelWhite.png"]:hover,img[src$="ok.png"]:hover{background-color:rgba(120, 120, 120, 1)}
