--- a/Release-1.8.css
+++ b/Release-1.8.css
@@ -48,6 +48,9 @@ input[type="checkbox"]:checked::before{
 input[type="checkbox"]:checked:after{
   width: 5px;
   height: 10px;
+  bottom: 8px;
+  left: 5px;
+  position: absolute;
   border: solid white;
   border-width: 0 3px 3px 0;
   -webkit-transform: rotate(45deg);
