--- a/Release-1.8.3.css
+++ b/Release-1.8.3.css
@@ -24,7 +24,7 @@ td.column3:hover{color:rgba(255,128,64,1.00);}
 td.column4:hover{color:green;}
 .stlButton:active,.stlButton:active:hover{outline: 0;background:linear-gradient(to top, rgba(44, 186, 255, 1) 0%, rgba(18, 126, 242, 1) 100%) !important}
 .stlButton:focus{outline: rgba(255, 114, 0, 0.51) auto 10px;}
-select:hover,select:focus,select:active{background-color:#EEE;border: 1px #000 solid}
+select:hover,select:focus,select:active{border: 1px #000 solid;outline:0}
 textarea:focus:not([readonly]),input[type="text"]:focus,input[type="password"]:focus,input:not([type]):focus,input[type="url"]:focus,input[type="email"]:focus,input[type="day"]:focus,input[type="search"]:focus,input[type="number"]:focus,input[type="text"]:active,input[type="password"]:active,input:not([type]):active,input[type="url"]:active,input[type="email"]:active,input[type="day"]:active,input[type="search"]:active,input[type="number"]:active{cursor:text !important;outline: 0;background-color:#EEE}
 .stlButton:hover{background:linear-gradient(to bottom, rgba(44, 186, 255, 1) 0%, rgba(18, 126, 242, 1) 100%) !important}
 .unselectable.toolbar tr{background:linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(204,204,204,1) 100%) !important}
@@ -65,3 +65,6 @@ input[type="checkbox"]:disabled:before,input[type="checkbox"]:disabled:after{
 }
 div.segmented .cell:focus,div.segmented .cell:focus:active,div.segmented .cell:active{background-color:#09a4ff !important}
 img[src$="cancelWhite.png"]:hover,img[src$="ok.png"]:hover{background-color:rgba(120, 120, 120, 1)}
+img[src$="cancelWhite.png"],img[src$="ok.png"]{border-radius:50%}
+select{background-color:#EEE;}
+select:active{color:#fff !important}
